// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlanCard /> Snapshots should match snapshot with default PlanCard 1`] = `
.c18 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c18 svg {
  width: 24px;
  height: 24px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c18:not([disabled]):hover,
.c18:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c18:active {
  background-color: rgba(35,27,34,0.75);
  color: #FFFFFF;
}

.c18:active svg {
  fill: #FFFFFF;
}

.c18:disabled {
  background-color: #F5F5FA;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c18:disabled svg {
  fill: #D7D7E0;
}

.c9 {
  margin: 0;
  padding: 0;
  font-size: 48px;
  line-height: 56px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
}

.c17 {
  margin-top: 32px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  text-transform: uppercase;
  margin-bottom: 8px;
  color: #6B6B78;
  font-weight: 500;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 20px;
  line-height: 28px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  color: #231B22;
  margin-bottom: 4px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 16px;
  margin-bottom: 32px;
}

.c10 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c8 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-right: 4px;
}

.c0 {
  width: 100%;
  display: inline-block;
  position: relative;
  max-width: 288px;
  overflow: hidden;
  padding: 64px 20px 32px 20px;
  border-radius: 16px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  display: inline-block;
  width: 100%;
  height: 8px;
  background-color: #710252;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  padding: 4px 8px 4px 8px;
  color: #7068D4;
  border-radius: 4px;
  border-width: 1px;
  border-color: #7068D4;
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
}

.c3 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E0DFFF;
  color: #231B22;
  border-radius: 4px;
  border-color: #E0DFFF;
  font-size: 12px;
  font-weight: 500;
}

.c3 svg {
  margin-right: 4px;
}

.c4 {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 28px;
  left: 20px;
}

.c11 {
  height: 92px;
  margin: 16px 0 0;
  padding: 0;
  list-style: none;
}

.c14 {
  margin-right: 12px;
}

.c12 {
  margin-bottom: 16px;
}

.c12 svg {
  vertical-align: middle;
  margin-right: 12px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 0;
}

.c13 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c15 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  display: inline-block;
  height: 100%;
  vertical-align: middle;
  color: #231B22;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c16 {
  display: block;
  padding: 0;
  margin-top: 12px;
  width: 100%;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  background-color: transparent;
  border: none;
  font-family: Rubik;
  font-size: 12px;
  font-weight: 500;
  color: #D8385E;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  outline: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div>
  <article
    class="c0"
  >
    <span
      class="c1"
    />
    <div
      class="c2 c3 c4"
    >
      Recommended Plan
    </div>
    <div
      class=""
    >
      <p
        class="c5"
      >
        plan
      </p>
      <h5
        class="c6"
      >
        Basic
      </h5>
      <div
        class="c7"
      >
        <sup
          class="c8"
        >
          $
        </sup>
        <strong
          class="c9"
        >
          99.90
        </strong>
        <sub
          class="c10"
        >
           /month
        </sub>
      </div>
      <p
        class="c5"
      >
        Get access to
      </p>
      <ul
        class="c11"
      >
        <li
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <svg
                height="16"
                stroke="#9898A6"
                width="16"
              />
            </div>
            <span
              class="c15"
            >
              gyms and studios
            </span>
          </div>
        </li>
        <li
          class="c12"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <svg
                fill="#9898A6"
                height="16"
                width="16"
              />
            </div>
            <span
              class="c15"
            >
              list item
            </span>
          </div>
          <a
            class="c16"
          >
            button
          </a>
        </li>
      </ul>
    </div>
    <footer
      class="c17"
    >
      <button
        class="c18"
      >
        Select this plan
      </button>
    </footer>
  </article>
</div>
`;

exports[`<PlanCard /> Snapshots should match snapshot with suffix 1`] = `
.c6 {
  margin: 0;
  padding: 0;
  font-size: 48px;
  line-height: 56px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  text-transform: uppercase;
  margin-bottom: 8px;
  color: #6B6B78;
  font-weight: 500;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 20px;
  line-height: 28px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  color: #231B22;
  margin-bottom: 4px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 16px;
  margin-bottom: 32px;
}

.c7 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c5 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-right: 4px;
}

.c0 {
  width: 100%;
  display: inline-block;
  position: relative;
  max-width: 288px;
  overflow: hidden;
  padding: 64px 20px 32px 20px;
  border-radius: 16px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  display: inline-block;
  width: 100%;
  height: 8px;
  background-color: #1D856C;
}

<div>
  <article
    class="c0"
  >
    <span
      class="c1"
    />
    <div
      class=""
    >
      <p
        class="c2"
      >
        plan
      </p>
      <h5
        class="c3"
      >
        Basic
      </h5>
      <div
        class="c4"
      >
        <sup
          class="c5"
        >
          $
        </sup>
        <strong
          class="c6"
        >
          99.90
        </strong>
        <sub
          class="c7"
        >
          MXN /month
        </sub>
      </div>
    </div>
  </article>
</div>
`;

exports[`<PlanCard /> Snapshots should match snapshot with variant 1`] = `
.c6 {
  margin: 0;
  padding: 0;
  font-size: 48px;
  line-height: 56px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  text-transform: uppercase;
  margin-bottom: 8px;
  color: #6B6B78;
  font-weight: 500;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 20px;
  line-height: 28px;
  font-weight: 500;
  font-family: Rubik;
  color: #231B22;
  color: #231B22;
  margin-bottom: 4px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 16px;
  margin-bottom: 32px;
}

.c7 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c5 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-right: 4px;
}

.c0 {
  width: 100%;
  display: inline-block;
  position: relative;
  max-width: 288px;
  overflow: hidden;
  padding: 64px 20px 32px 20px;
  border-radius: 16px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 6px rgba(152,152,166,0.25);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  display: inline-block;
  width: 100%;
  height: 8px;
  background-color: #1D856C;
}

<div>
  <article
    class="c0"
  >
    <span
      class="c1"
    />
    <div
      class=""
    >
      <p
        class="c2"
      >
        plan
      </p>
      <h5
        class="c3"
      >
        Basic
      </h5>
      <div
        class="c4"
      >
        <sup
          class="c5"
        >
          $
        </sup>
        <strong
          class="c6"
        >
          99.90
        </strong>
        <sub
          class="c7"
        >
           /month
        </sub>
      </div>
    </div>
  </article>
</div>
`;
